<resources>
    <string name="app_name">Transporter</string>
    <!--    <string name="app_name">Ant Driver</string>-->

    <string name="sign_up"><u> Sign Up</u></string>
    <string name="sign_in"><u> Sign In</u></string>

    <string name="server_client_id">959322323632-fup1smv3i4bdhidvlcbpbk41na70v407.apps.googleusercontent.com</string>
    <string name="check_internet">Please Check Internet Connection</string>
    <string name="tare">Tare</string>
    <string name="enter_tare">Enter Tare</string>
    <string name="upload_picture_of_latest_vehicle_license">Upload picture of latest Vehicle License</string>
    <string name="upload_picture_of_odometer">Upload Picture of the Odometer with Current KM\'s</string>
    <string name="save_continue">Save &amp; Continue</string>

    <string name="navigation_drawer_open">Open Drawar</string>
    <string name="navigation_drawer_close">Close Drawar</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="account_information">Account Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="reset_password">Reset Password</string>
    <string name="notification">Notification</string>

    <string name="abount_ants">About Ants</string>
    <string name="contact_ants">Contact Ants</string>
    <string name="faq">FAQ</string>
    <string name="term_condition">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_fragment">Current Trip</string>
    <string name="notification_setting">Notification</string>
    <string name="support">Support</string>
    <string name="postal_address">Postal Address</string>
    <string name="residential_address">Residential Address</string>
    <string name="gross_vehicle_mass">Gross Vehicle Mass</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="vehicle_identifaction_number">Vehicle Identification Number</string>
    <string name="assign_this_vehicle_to">Assign this Vehicle to</string>
    <string name="address2">Indore</string>
    <string name="package_detail">Package Detail</string>
    <string name="sender_details">Sender Details</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="drop_address">Drop of Address</string>


    <string name="user_email">adityasengar2011@gmail.com</string>
    <string name="current_booking_info">Current Booking Info</string>
    <string name="error_message">Something went wrong. Please try again letter!</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="logout_text">Are you sure, you want to logout?</string>

</resources>
