<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".activity.vehicleDetails.VeiwVehicleDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/arrow_back" />

            <com.an.customfontview.CustomTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Vehicles"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:textFontPath="fonts/poppins_regular.otf" />

            <ImageView
                android:id="@+id/img_add"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/plus_black"
                android:visibility="gone" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="20sp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="2dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <com.ants.driverpartner.everywhere.custom.CircleImageView
                        android:id="@+id/img_vehicle"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="25dp"
                        app:civ_border_width="0dp"
                        app:civ_border_color="@color/colorBlack"
                        android:src="@drawable/profile_edit_pic" />


                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_vehicle_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />

                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Registration Date"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_reg_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />

                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/tare"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_tare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/gross_vehicle_mass"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_vehicle_mass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />

                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/vehicle_registration_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_reg_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />

                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/vehicle_identifaction_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_identification_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Vehicle Type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/assign_this_vehicle_to"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                    <com.an.customfontview.CustomTextView
                        android:id="@+id/tv_driver_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        app:textFontPath="fonts/poppins_regular.otf" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </ScrollView>


    </LinearLayout>

</layout>